2006-03-07  Derek Price  <derek@ximbiot.com>

	* NEWS: Note rtag fixes.

2006-02-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note CVSADM fix as an efficiency improvement.

2006-02-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note unconditional val-tags lock removal.

	* NEWS: Note history buffer overflow fix.

2006-01-30  Derek Price  <derek@ximbiot.com>

	* NEWS: Note nonblocking flow control pipe fix.

2005-12-09  Derek Price  <derek@ximbiot.com>

	* NEWS: Note misc doc & bug fixes.

2005-12-07  Derek Price  <derek@ximbiot.com>

	* NEWS: Note recognition of :extssh:.

2005-10-18  Derek Price  <derek@ximbiot.com>

	* KEYS: New file, suggested by Antoine Lexy-Lambert <antoine@gmx.de>.
	* README: Mention KEYS file.

2005-09-26  Derek Price  <derek@ximbiot.com>

	[bug #14639]
	* acinclude.m4: Find the crypto library on FreeBSD 5.x.
	Patch from Serguei E. Leontiev <lse@CryptoPro.ru>.

	* NEWS: Note FreeBSD 5.x GSSAPI fix.

	* NEWS: Note fsync'd commits.

2005-09-24  Derek Price  <derek@ximbiot.com>

	* NEWS, HACKING: Standardize on Automake 1.9.6.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* NEWS: Mention conflict fixes.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* TESTS: Mention new $username8 & $anyusername variables.

2005-09-04  Larry Jones  <lawrence.jones@ugs.com>

	* NEWS: s/bug-cvs@gnu.org/bug-cvs@nongnu.org/.
	* configure.in: s/info-cvs@gnu.org/info-cvs@nongnu.org/.
	* configure: Regenerated.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* AUTHORS, DEVEL-CVS, HACKING, README: Update links, email addresses,
	& mailing list descriptions.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* FAQ: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* HACKING, INSTALL, README, README.VMS, configure.in: Update links and
	email addresses.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* www/.htaccess: Remove this file.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.spec.in: Note last spec file change in internal ChangeLog.
