@@ -3,6 +3,8 @@ Changes since 1.11.21:
 
 BUG FIXES
 
+* The GSSAPI server should now build under HP-UX.
+
 * `cvs rtag' now correctly tags files that have been removed from the trunk.
 
 * Code efficiency has been improved slightly.
